[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/boss.gd" type="Script" id=1]
[ext_resource path="res://boss_sprites.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 49.8629, 50.1069 )

[node name="boss" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2, 0, 0, 2, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 9.8
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
player_speed = -100
player_jump_height = 50

[node name="character_sprites" parent="." instance=ExtResource( 2 )]

transform/scale = Vector2( 2, 2 )

[node name="Sprite" parent="character_sprites/base"]

transform/scale = Vector2( 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/scale = Vector2( 2, 2 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="RayCast2D_Down" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, 18.5871 )
transform/scale = Vector2( 2, 2.36264 )
enabled = true
cast_to = Vector2( 0, 35 )
layer_mask = 1
type_mask = 15

[node name="RayCast2D_Up" type="RayCast2D" parent="."]

transform/pos = Vector2( -2.30876e-06, -26.4091 )
transform/rot = 180.0
transform/scale = Vector2( 2, 2.51188 )
enabled = true
cast_to = Vector2( 0, 30 )
layer_mask = 1
type_mask = 15

[node name="RayCast2D_Left" type="RayCast2D" parent="."]

transform/pos = Vector2( -0.696991, 8.31153e-09 )
transform/rot = 270.0
transform/scale = Vector2( 2, 2.02178 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="RayCast2D_Right" type="RayCast2D" parent="."]

transform/pos = Vector2( 27.0184, -1.18101e-06 )
transform/rot = 90.0
transform/scale = Vector2( 2, 2.52712 )
enabled = true
cast_to = Vector2( 0, 30 )
layer_mask = 1
type_mask = 15


[editable path="character_sprites"]
